# refurb

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-hooks.yaml  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  temp.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  enhancement.yml
.github/workflows/: ci-mypy-latest.yml  ci.yml  deploy.yml
docs/: adding-new-checks.md  categories.md  check-ideas.md  checks.md  gen_checks.py
docs/configs/: README.md  default.toml  reference.toml
refurb/: __main__.py  _visitor_mappings.py  error.py  explain.py  flake8.py  gen.py  loader.py  main.py  settings.py  types.py  visitor.py
refurb/checks/: common.py
refurb/checks/builtin/: list_extend.py  no_del.py  no_ignored_dict_items.py  no_ignored_enumerate.py  no_is_type_none.py  no_isinstance_type_none.py  no_set_for_loop.py  no_slice_copy.py  no_sorted_min_max.py  print.py  set_discard.py  simplify_comprehension.py  simplify_global_and_nonlocal.py  use_bit_count.py  use_int_base_zero.py  use_isinstance_tuple.py  use_max.py  use_setdefault.py  writelines.py
refurb/checks/builtin/list_extend/: block.py  common.py  mypyfile.py
refurb/checks/collections/: no_subclass_builtin.py
refurb/checks/contextlib/: with_suppress.py
refurb/checks/datetime/: simplify_fromisoformat.py  unreliable_utc_usage.py
refurb/checks/decimal/: simplify_ctor.py
refurb/checks/flow/: no_trailing_continue.py  no_trailing_return.py  no_with_assign.py  simplify_return.py  use_stopiteration.py
refurb/checks/function/: use_implicit_default.py
refurb/checks/functools/: use_cache.py
refurb/checks/hashlib/: simplify_ctor.py  use_hexdigest.py
refurb/checks/iterable/: implicit_readlines.py  in_tuple.py  no_single_item_in.py
refurb/checks/iterable/in_tuple/: error.py  for_stmt.py  generator.py  in_expr.py
refurb/checks/itertools/: use_chain_from_iterable.py  use_starmap.py
refurb/checks/logical/: use_equal_chain.py  use_in.py  use_or.py
refurb/checks/math/: simplify_log.py  use_constants.py
refurb/checks/pathlib/: cwd.py  exists.py  getsize.py  is_file.py  mkdir.py  no_cwd_resolve.py  no_join.py  open.py  read_text.py  read_x.py  simplify_ctor.py  touch.py  unlink.py  use_suffix.py  util.py  with_suffix.py  write_text.py
refurb/checks/pattern_matching/: simplify_as_builtin.py
refurb/checks/readability/: fluid_interface.py  in_keys.py  no_copy_with_merge.py  no_double_not.py  no_from_float.py  no_is_bool_compare.py  no_len_cmp.py  no_or_default.py  no_redundant_assign.py  no_temp_class_object.py  no_unnecessary_cast.py  use_abc_shorthand.py  use_comprehension.py  use_dict_union.py  use_func_name.py  use_isinstance_bool.py  use_literal.py  use_operators.py  use_reverse.py  use_sort.py  use_str_func.py  use_str_method.py  use_tuple_swap.py
refurb/checks/regex/: use_long_flag.py  use_pattern_method.py
refurb/checks/secrets/: simplify_token_function.py
refurb/checks/shlex/: use_join.py
refurb/checks/string/: charsets.py  expandtabs.py  fstring_number.py  no_multiline_lstrip.py  remove_prefix_or_suffix.py  simplify_split.py  simplify_strip.py  startswith.py  use_fstring_fmt.py
refurb/visitor/: __init__.py  mapping.py  method_mapping.py  traverser.py  visitor.py
test/: conftest.py  mypy_visitor.py  test_all.py  test_arg_parsing.py  test_category_naming.py  test_check_formatting.py  test_checks.py  test_explain.py  test_flake8_plugin.py  test_gen.py  test_github_annotations.py  test_loader.py  test_main.py  test_visitor.py  test_visitor_mappings.py
test/config/: amend_config.toml  config.toml
test/custom_checks/: disabled_check.py  disallow_call.py  no_docstring.py  settings.py
test/data/: bug_cast.py  bug_cast.txt  bug_equivalent_nodes.py  bug_equivalent_nodes.txt  bug_recursion_error.py  bug_type_reassignment.py  bug_type_reassignment.txt  err_100.py  err_100.txt  err_101.py  err_101.txt  err_102.py  err_102.txt  err_103.py  err_103.txt  err_104.py  err_104.txt  err_105.py  err_105.txt  err_106.py  err_106.txt  err_107.py  err_107.txt  err_108.py  err_108.txt  err_109.py  err_109.txt  err_110.py  err_110.txt  err_111.py  err_111.txt  err_112.py  err_112.txt  err_113.py  err_113.txt  err_114.py  err_114.txt  err_115.py  err_115.txt  err_116.py  (+161 more)
test/data_3.10/: err_121.py  err_121.txt  err_161.py  err_161.txt
test/data_3.11/: err_162.py  err_162.txt
test/data_3.12/: bug_type_alias_stmt.py  bug_type_alias_stmt.txt
test/data_3.9/: err_121.py  err_121.txt
test/e2e/: dummy.py  gbk.py  main.sh
test/e2e/stub_pkg/: file.py  file.pyi
test/invalid_checks/: invalid_check.py
