[tool.poetry]
name = "refurb"
version = "1.15.0"
description = "A tool for refurbish and modernize Python codebases"
authors = ["dosisod"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dosisod/refurb"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.10"
mypy = ">=0.981"
tomli = {version = "^2.0.1", python = "<3.11"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.poetry.scripts]
refurb = "refurb.__main__:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
color_output = true

[tool.mypy]
allow_redefinition = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
namespace_packages = true
pretty = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "test.*"
allow_untyped_defs = true

[tool.coverage.run]
omit = [
  "refurb/__main__.py",
  "refurb/gen.py"
]

[tool.coverage.report]
skip_covered = true
skip_empty = true

[tool.black]
exclude = "test/data/*"
line-length = 79
check = true
diff = true
color = true

[tool.pytest.ini_options]
addopts = "--cov=refurb --cov-report=html --cov-report=term-missing --cov-fail-under=100"
testpaths = ["test"]

[tool.ruff]
line-length = 79

extend-select = [
  "W", "N", "UP", "YTT", "S", "BLE", "B",
  "C4", "DTZ", "ISC", "PIE", "PT", "RET",
  "SIM", "PTH", "PLE", "RUF", "FBT",
]

# TODO: fix RUF100 not playing well with refurb
extend-ignore = ["S101", "N813", "N818", "SIM102", "PT012", "RUF100", "F821", "B905", "FBT001"]

extend-exclude = ["test/data*"]

[tool.ruff.per-file-ignores]
"test/*" = ["E501"]
"refurb/main.py" = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
